force-app/main/default/objects/uu_Changelog_Item__c/uu_Changelog_Item__c.object-meta.xml
<CustomObject>
    <label>Changelog Item</label>
    <nameField>
        <displayFormat>CLI-{0000000000}</displayFormat>
        <label>Salesforce Changelog Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Changelog Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>