force-app/main/default/objects/uu_Changelog_Item__c/fields/Change_Datetime__c.field-meta.xml
<CustomField>
    <fullName>Change_Datetime__c</fullName>
    <label>Change Datetime</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>