force-app/main/default/objects/uu_Changelog_Item__c/fields/Changelog_Audience__c.field-meta.xml
<CustomField>
    <fullName>Changelog_Audience__c</fullName>
    <label>Changelog Audience</label>
    <required>true</required>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>All</fullName>
            </value>
            <value>
                <fullName>Advancement Services</fullName>
            </value>
            <value>
                <fullName>Fundraisers</fullName>
            </value>
            <value>
                <fullName>Gift Services</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>