force-app/main/default/objects/uu_Changelog_Item__c/fields/Deployment_URL__c.field-meta.xml
<CustomField>
    <fullName>Deployment_URL__c</fullName>
    <label>Deployment URL</label>
    <type>Url</type>
</CustomField>