force-app/main/default/objects/uu_Changelog_Item__c/fields/Is_Published__c.field-meta.xml
<CustomField>
    <fullName>Is_Published__c</fullName>
    <label>Is Published</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>