force-app/main/default/objects/uu_Changelog_Item__c/listViews/All_Changelog_Items.listView-meta.xml
<ListView>
    <fullName>All_Changelog_Items</fullName>
    <columns>NAME</columns>
    <columns>Title__c</columns>
    <columns>Short_Description__c</columns>
    <columns>Changelog_Audience__c</columns>
    <columns>Change_Datetime__c</columns>
    <columns>Change_Type__c</columns>
    <columns>Documentation_Link__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Changelog Items</label>
</ListView>